@@ -1,3 +1,13 @@
+2007-12-02  Tim Vandermeersch <tim.vandermeersch@gmail.com>
+
+	* src/forcefield.cpp, include/openbabel/forcefield.h: Split 
+	SystematicRotorSearch into ...Initialize and ...NextConformer. This 
+	alows a progress bar to be displayed in avogadro.
+
+	* src/forcefields/forcefieldghemical.cpp: Removed (commented out)
+	special treatment of linear angles, wasn't workiung correctly, needs
+	to be looked at...
+
 2007-11-30  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* src/chains.cpp: Improve speed when clearing residue info in
